--- a/app/src/main/res/layout/view_student_activity.xml
+++ b/app/src/main/res/layout/view_student_activity.xml
@@ -20,7 +20,7 @@
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay"
-            android:title="Edit Student"/>
+            android:title="View Student"/>
 
     </android.support.design.widget.AppBarLayout>
 
