--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -7,4 +7,11 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/action_edit"
+        android:orderInCategory="99"
+        android:title="Editing Tools"
+        android:icon="@drawable/ic_mode_edit_white"
+        app:showAsAction="ifRoom" />
+
 </menu>
