--- a/app/src/main/res/layout/fragment_student_list.xml
+++ b/app/src/main/res/layout/fragment_student_list.xml
@@ -3,7 +3,8 @@
     xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.fragment_student_list">
+    android:id="@+id/container_student_list"
+    tools:context=".fragments.FragmentStudentList">
 
     <!-- A RecyclerView with some commonly used attributes -->
     <ListView
