--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -10,8 +10,14 @@
     <item
         android:id="@+id/action_edit"
         android:orderInCategory="99"
-        android:title="Editing Tools"
+        android:title="Edit Student"
         android:icon="@drawable/ic_mode_edit_white"
+        app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/action_add"
+        android:orderInCategory="99"
+        android:title="Add Student"
+        android:icon="@drawable/ic_add_white"
         app:showAsAction="ifRoom" />
 
 </menu>
