--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,22 +2,31 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".activities.MainActivity">
+
+
+
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+
+    <group android:id="@+id/menu_group" >
+
+    <item
+        android:id="@+id/action_add"
+        android:orderInCategory="99"
+        android:title="Editing Tools"
+        android:icon="@drawable/ic_add_white"
+        app:showAsAction="ifRoom" />
+
     <item
         android:id="@+id/action_edit"
         android:orderInCategory="99"
         android:title="Edit Student"
         android:icon="@drawable/ic_mode_edit_white"
         app:showAsAction="ifRoom" />
-    <item
-        android:id="@+id/action_add"
-        android:orderInCategory="99"
-        android:title="Add Student"
-        android:icon="@drawable/ic_add_white"
-        app:showAsAction="ifRoom" />
+
+    </group>
 
 </menu>
