--- a/app/src/main/res/layout/fragment_add_student.xml
+++ b/app/src/main/res/layout/fragment_add_student.xml
@@ -21,8 +21,7 @@
     <RelativeLayout
         android:id="@+id/relative_layout_add_student"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
->
+        android:layout_height="wrap_content">
 
         <RelativeLayout
             android:id="@+id/relative_layout_student_image_add_student"
