--- a/app/src/main/res/layout/fragment_view_student.xml
+++ b/app/src/main/res/layout/fragment_view_student.xml
@@ -3,18 +3,22 @@
     xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.FragmentViewStudent">
+    tools:context=".fragments.fragment_view_student">
 
-    <RelativeLayout
-        android:id="@+id/relative_layout_add_student_view_student"
+    <LinearLayout
+        android:id="@+id/linear_layout_add_student"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
         android:layout_marginTop="0dp"
         android:layout_marginBottom="0dp"
         android:paddingLeft="20dp"
-        android:paddingTop="10dp"
-        android:paddingRight="20dp"
-        android:paddingBottom="5dp">
+        android:paddingRight="20dp">
+
+    <RelativeLayout
+        android:id="@+id/relative_layout_view_student"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
         <RelativeLayout
             android:id="@+id/relative_layout_student_image_view_student"
@@ -131,4 +135,60 @@
 
     </RelativeLayout>
 
+        <LinearLayout
+            android:id="@+id/linear_layout_birth_date_view_student"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/relative_layout_view_student"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/text_birth_time"
+                android:text="Birth Time"
+                android:textSize="18sp"
+                android:layout_width="110dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:gravity="left|center"
+                />
+
+            <TextView
+                android:id="@+id/text_birth_date_view_student"
+                style="android:Widget.Holo.Light.Spinner"
+                android:layout_height="40dp"
+                android:layout_width="100dp"
+                android:layout_weight="1"
+                android:paddingLeft="12dp"
+                android:textColor="@color/material_blue_grey_800"
+                android:gravity="center"/>
+        </LinearLayout>
+
+
+    <LinearLayout
+        android:id="@+id/linear_layout_birth_time_view_student"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/text_birth_time_view_student"
+            android:text="Birth Time"
+            android:textSize="18sp"
+            android:layout_width="110dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:gravity="left|center"
+            />
+
+        <TextView
+            android:id="@+id/birth_time_button_view_student"
+            style="android:Widget.Holo.Light.Spinner"
+            android:layout_height="40dp"
+            android:layout_width="100dp"
+            android:layout_weight="1"
+            android:paddingLeft="12dp"
+            android:textColor="@color/material_blue_grey_800"
+            android:gravity="center"/>
+    </LinearLayout>
+</LinearLayout>
 </FrameLayout>
