--- a/app/src/main/res/layout/fragment_edit_student.xml
+++ b/app/src/main/res/layout/fragment_edit_student.xml
@@ -6,16 +6,20 @@
     tools:context=".fragments.FragmentEditStudent"
     >
 
-    <RelativeLayout
-        android:id="@+id/relative_layout_edit_student"
+    <LinearLayout
+        android:id="@+id/linear_layout_edit_student"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
         android:layout_marginTop="0dp"
         android:layout_marginBottom="0dp"
         android:paddingLeft="20dp"
-        android:paddingTop="10dp"
-        android:paddingRight="20dp"
-        android:paddingBottom="5dp">
+        android:paddingRight="20dp">
+
+    <RelativeLayout
+        android:id="@+id/relative_layout_edit_student"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
         <RelativeLayout
             android:id="@+id/relative_layout_edit_student_image"
@@ -107,11 +111,73 @@
     </RelativeLayout>
 
     <LinearLayout
+        android:id="@+id/linear_layout_birth_date_edit_student"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/relative_layout_add_student"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/text_birth_date_edit_student"
+            android:text="Birth Date"
+            android:textSize="18sp"
+            android:layout_width="110dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:gravity="left|center"
+            />
+
+        <Button
+            android:id="@+id/button_birth_date_edit_student"
+            style="android:Widget.Holo.Light.Spinner"
+            android:layout_height="40dp"
+            android:layout_width="100dp"
+            android:layout_weight="1"
+            android:paddingLeft="12dp"
+            android:textColor="@color/material_blue_grey_800"
+            android:gravity="center"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linear_layout_birth_time_edit_student"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/relative_layout_edit_student"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/text_birth_time_edit_student"
+            android:text="Birth Time"
+            android:textSize="18sp"
+            android:layout_width="110dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:gravity="left|center"
+            />
+
+        <Button
+            android:id="@+id/button_birth_time_edit_student"
+            style="android:Widget.Holo.Light.Spinner"
+            android:layout_height="40dp"
+            android:layout_width="100dp"
+            android:layout_weight="1"
+            android:paddingLeft="12dp"
+            android:textColor="@color/material_blue_grey_800"
+            android:gravity="center"/>
+    </LinearLayout>
+
+    <RelativeLayout
+        android:id="@+id/relative_layout_buttons_edit_student"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:gravity="bottom">
+
+    <LinearLayout
         android:orientation="horizontal"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/relative_layout_edit_student"
-        android:layout_gravity="bottom">
+        android:layout_alignParentBottom="true">
 
         <Button
             android:layout_width="0dp"
@@ -134,6 +200,8 @@
             android:id="@+id/button_save_edit_student"
             android:layout_weight="1"
             />
+    </LinearLayout>
+    </RelativeLayout>
     </LinearLayout>
 
 </FrameLayout>
